--- a/int_resources/css/color-tones-saturation.css
+++ b/int_resources/css/color-tones-saturation.css
@@ -88,10 +88,13 @@ html .percent-gap{
     min-width:190px;
     padding:4px;
     box-sizing:border-box;
-    border:solid 2px;
-    border-radius:var(--wrapperPadding1);
+
     text-align:center;
     font-size:16px;
+    text-transform:capitalize;
+
+    border:solid 2px;
+    border-radius:var(--wrapperPadding1);
 }
 
         /* Tone Group */
