--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -803,9 +803,12 @@ main{
 .main-wrapper{
     margin:var(--wrapperPadding1) auto;
     position:relative;
+
     background-color:var(--shade3);
     border-radius:var(--wrapperRadius1);
     box-shadow:var(--box-shadow1) var(--wrapperColor1), var(--box-shadow2) var(--wrapperColor1);
+    backdrop-filter:blur(4px);
+
     transition:0.15s;
 }
 
