--- a/int_resources/css/color-meaning.css
+++ b/int_resources/css/color-meaning.css
@@ -94,17 +94,24 @@
     z-index:5;
 }
 
+.s-font1 .color-name{
+    font-size:22px;
+}
+
         /* Color Meaning - Text */
 
 .cm-name{
     grid-area:cm-name;
     width:100%;
     margin-bottom:var(--wrapperPadding1);
-    text-align:center;
-    text-transform:uppercase;
+
     display:flex;
     align-items:center;
     gap:var(--wrapperPadding1);
+
+    font-family:cp-font1;
+    text-align:center;
+    text-transform:uppercase;
 }
 
 .cm-name:before,
@@ -125,7 +132,6 @@
     grid-area:cm-meaning;
     color:var(--txt1);
     text-wrap:balance;
-    font-family:cp-font2;
     font-size:20px;
 }
 
@@ -142,7 +148,6 @@
     color:var(--ucp1);
     text-wrap:balance;
     text-align:center;
-    font-family:cp-font1;
     font-size:16px;
     text-transform:uppercase;
     font-weight:800;
@@ -205,6 +210,10 @@
         grid-template-columns:280px 1fr;
         grid-template-rows:auto 1fr auto auto;
         column-gap:var(--wrapperPadding1);
+    }
+
+    .s-font1 .color-name{
+        font-size:20px;
     }
     
     .cm-meaning{
@@ -298,8 +307,16 @@
         font-size:26px;
     }
 
+    .s-font1 .cm-name{
+        font-size:22px;
+    }
+
     .color-name{
         font-size:min(20px, 5.25vw);
+    }
+    
+    .s-font1 .color-name{
+        font-size:min(18px, 4.25vw);
     }
 
     .color-values:has(p:nth-of-type(4)) p{
@@ -312,6 +329,14 @@
 
     .cm-name{
         font-size:20px;
+    }
+    
+    .s-font1 .cm-name{
+        font-size:min(18px, 6vw);
+    }
+
+    .s-font1 .color-name{
+        font-size:min(16px, 4vw);
     }
 
     .display-color-inner{
