--- a/int_resources/css/typefaces.css
+++ b/int_resources/css/typefaces.css
@@ -240,7 +240,7 @@
 
     /* Type Specimens */
 
-.specimens{
+.specimen{
     display:flex;
     flex-direction:column;
     gap:12px;
@@ -288,4 +288,110 @@
 .style3{
     font-weight:800;
     font-style:italic;
+}
+
+
+
+    /* Character Sets */
+
+.set{
+    display:flex;
+    flex-direction:column;
+    gap:16px;
+}
+
+.child-set{
+    width:100%;
+    display:grid;
+    grid-template-columns:repeat(7, 1fr);
+    row-gap:16px;
+}
+
+.number-set,
+.special-set{
+    grid-template-columns:repeat(5, 1fr);
+}
+
+.set-break{
+    width:100%;
+    height:4px;
+    border-radius:200px;
+    background-color:var(--ucp1);
+}
+
+.tf-secondary .set-break{
+    background-color:var(--ucp2);
+}
+
+.tf-main .set-item{
+    font-family:cp-font1;
+}
+
+.tf-secondary .set-item{
+    font-family:cp-font2;
+}
+
+.set-item{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size:32px;
+}
+
+        /* Character Sets - media */
+
+@media screen and (width <= 1200px){
+
+    .alphabet-set{
+        grid-template-columns:repeat(9, 1fr);
+    }
+
+}
+
+@media screen and (width <= 1024px){
+
+    .alphabet-set{
+        grid-template-columns:repeat(7, 1fr);
+    }
+
+}
+
+@media screen and (width <= 768px){
+
+    .alphabet-set{
+        grid-template-columns:repeat(6, 1fr);
+    }
+
+}
+
+@media screen and (width <= 540px){
+
+    .alphabet-set{
+        grid-template-columns:repeat(4, 1fr);
+    }
+
+}
+
+@media screen and (width <= 440px){
+
+    .alphabet-set{
+        grid-template-columns:repeat(4, 1fr);
+    }
+
+    .set-item{
+        font-size:26px;
+    }
+
+}
+
+@media screen and (width <= 320px){
+
+    .child-set{
+        grid-template-columns:repeat(4, 1fr);
+    }
+
+    .alphabet-set{
+        grid-template-columns:repeat(3, 1fr);
+    }
+
 }
