--- a/int_resources/css/layouts.css
+++ b/int_resources/css/layouts.css
@@ -114,12 +114,17 @@
     box-sizing:border-box;
 
     color:var(--txt1);
+    font-family:cp-font2;
     font-size:16px;
 
     background-color:transparent;
     border:none;
     border-bottom:2px solid var(--txt1);
     transition:0.15s;
+}
+
+.s-font2 .lp-search-box{
+    font-size:15px;
 }
 
 .lp-search-box:focus{
@@ -734,6 +739,16 @@
         font-size:15px;
     }
     
+}
+
+        /* Layout 0 - PDF Settings */
+
+@media print{
+
+    .lp-banner svg{
+        width:400px;
+    }
+
 }
 
 
