v.2.9.2 - Typeface paths and ReadMe screenshot
Changed the typeface paths, because the old ones ("Fonts" instead of "fonts") were causing some problems when hosting the website on github.

Additionally, I changed the screenshot of the Color Chart page. There was an issue when converting PDF to PNG and a few words were not displayed (there was a gradient instead).

--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -202,17 +202,17 @@ body{
         /* Fonts */
 
 @font-face{
-    src:url(../Fonts/Quicksand-VariableFont_wghtbold.woff2);
+    src:url(../fonts/Quicksand-VariableFont_wghtbold.woff2);
     font-family:font1;
 }
 
 @font-face{
-    src:url(../Fonts/Quicksand-SemiBold.ttf);
+    src:url(../fonts/Quicksand-SemiBold.ttf);
     font-family:font1-semibold;
 }
 
 @font-face{
-    src:url(../Fonts/Roboto-Regular.woff2);
+    src:url(../fonts/Roboto-Regular.woff2);
     font-family:font2;
 }
 
